# backend

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  GEMINI.md  HANDHELD_AUTH_RECOVERY.md  README.md  pyproject.toml
.github/workflows/: deploy.yaml
metadata/: magic_eye_metadata.json
src/: main.py
src/common/dtos/: common_response.py  custom.py  pagination_meta.py  wrapped_response.py
src/common/utils/: get_services.py
src/configs/: api_routers.py  color_hint_formatter.py  database.py  gcs.py  http_client.py  logging_config.py  minio.py  origins.py  redis_conn.py  setting.py
src/domains/auth/: auth_router.py  auth_service.py
src/domains/auth/dtos/: auth_dtos.py
src/domains/auth/queries/: create_user.sql  create_user_with_password.sql  get_user_by_email.sql  get_user_password.sql  update_last_logout.sql  update_user_name.sql  update_user_password.sql  update_user_sso.sql
src/domains/auth/utils/: password_utils.py  session_manager.py  verify_firebase_token.py  verify_token.py
src/domains/discoverex/: discoverex_router.py  discoverex_service.py
src/domains/discoverex/dtos/: play_log_dto.py  theme_dto.py
src/domains/discoverex/queries/: insert_play_log.sql
src/domains/discoverex/utils/: gcs_util.py  minio_utils.py
src/domains/game/: game_service.py
src/domains/game/dtos/: game_dto.py
src/domains/game/queries/: create_game.sql  get_game_by_id.sql
src/domains/magic_eye/: magic_eye_router.py
src/domains/magic_eye/consts/: magic_eye_assets.py
src/domains/magic_eye/dtos/: magic_eye_dtos.py  magic_eye_game_response.py
src/domains/magic_eye/prompts/: witness_testimony.md
src/domains/magic_eye/services/: magic_eye_service.py
src/domains/magic_eye/utils/: fetch_metadata.py  gcs_image_loader.py  gcs_model_loader.py  generate_magic_eye_batch.py  get_diverse_prompts.py  upload_folder_to_gcs.py  witness_testimony.py
src/domains/media/: media_router.py  media_service.py
src/domains/score/: score_router.py  score_service.py
src/domains/score/dtos/: score_dto.py
src/domains/score/queries/: get_scores.sql  insert_score.sql
src/utils/: exceptions.py  gcs_image_loader.py  lifespan_handlers.py  load_sql.py  logger.py  parse_json.py
