[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.133.1",
    "fastapi-utils>=0.8.0",
    "firebase-admin>=7.2.0",
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
ai = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "google-cloud-storage>=3.9.0",
]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.14.11"]

[tool.ruff]
ignore = ["E501"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "INFO:     %(message)s"
