[project]
name = "backend"
version = "0.1.0"
description = "Magic Eye generation backend with adaptive CUDA support"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.133.1",
    "fastapi-utils>=0.8.0",
    "firebase-admin>=7.2.0",
    "google-cloud-storage>=2.14.0",
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[tool.uv]
environments = []

[tool.ruff]
ignore = ["E501"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
